💄(course-detail) fix course run visibility state icon position
Recently we fixed an issue about icon visibility state of course detail page. It
 was not display when the course run had no title. As a workaround we
 positioned icon through position: absolute. But we forgot to add a position:
 relative attribute to the course run row element so all visibility icon stick
 to the top of the course run list element instead to stick to the top of the
 course run row.

--- a/src/frontend/scss/components/templates/courses/cms/_course_detail.scss
+++ b/src/frontend/scss/components/templates/courses/cms/_course_detail.scss
@@ -125,6 +125,8 @@
   }
 
   &__run-descriptions {
+    position: relative;
+
     dl {
       margin: 0;
     }
